<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="23dp">

            <TextView
                android:id="@+id/text_ex_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="6dp"
                android:text="@string/ex_in"
                android:textSize="18sp" />

            <Button
                android:id="@+id/import_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_ex_in"
                android:layout_marginTop="40dp"
                android:background="@color/colorAccent2"
                android:text="@string/im_text"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/export_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_ex_in"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="40dp"
                android:background="@color/colorAccent2"
                android:text="@string/ex_text"
                android:textColor="@android:color/white" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>