<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/name"
                android:textStyle="italic"
                android:textSize="18sp" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/key_n"
                android:layout_below="@+id/text"
                android:hint="@string/app_pass"/>

            <Button
                android:id="@+id/save_butt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_below="@+id/key_n"
                android:background="@color/colorAccent"
                android:text="@string/button_save"/>

            <TextView
                android:id="@+id/ps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/save_butt"
                android:layout_centerInParent="true"
                android:text=""
                android:textColor="@android:color/black"
                android:textSize="25sp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>